# georgian-news-analyses

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  ingest.yml
db/migrations/: 0001_init.sql  0003_source_feeds.sql
db/seed/: 0002_sources.sql
eval/: README.md  pairs_to_label.csv
pipeline/: __init__.py  config.py  db.py  eval_pairs.py  fetch.py  rss.py  run.py  scrape.py
tests/: test_eval_pairs.py  test_fetch.py  test_rss.py  test_scrape.py
tests/fixtures/: formula_list.html  imedi_archive.html  netgazeti_feed.xml
