[project]
name = "ground-news-georgia"
version = "0.1.0"
description = "Pipeline that ingests Georgian news headlines, clusters them into events, and labels leaning coverage."
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.11",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "supabase>=2.15",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
include = ["pipeline*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
